@@ -11,9 +11,7 @@
 
 #include <ddk/ntddk.h>
 
-#ifndef NDEBUG
 #define NDEBUG
-#endif
 #include <debug.h>
 
 #include "vfat.h"
